--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -97,9 +97,8 @@ div.error {
   border-radius: 4px;
   margin: 20px 0;
 }
-
 input.error {
-  border: 1px solid var(--error)
+  border: 1px solid var(--error);
 }
 
 /* navbar */
@@ -107,9 +106,18 @@ nav {
   display: flex;
   align-items: center;
 }
-
 nav a {
   margin-left: 10px;
+}
+nav button {
+  background: #fff;
+  color: var(--primary);
+  border: 2px solid var(--primary);
+  padding: 6px 10px;
+  border-radius: 4px;
+  font-family: "Poppins";
+  cursor: pointer;
+  font-size: 1em;
 }
 
 /* auth forms */
